test/intrinsic.go
// errorcheckandrundir -0 -d=ssa/intrinsics/debug
// +build !ppc64,!ppc64le,amd64

// Copyright 2016 The Go Authors. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

package ignored
